survey: Allow answers' to be copied and fully visualized in print mode.
When in print mode, the comments in questions of type matrix, single_choice,
multple_choice which are longer than the <input> width aren't fully displayed.

Using a div instead of disabled inputs help also user to copy the answers for
further processing.

--- a/addons/survey/static/src/css/survey_print.css
+++ b/addons/survey/static/src/css/survey_print.css
@@ -1,3 +1,9 @@
+.survey-wrapped-div {
+    overflow-wrap: break-word;
+    cursor: text;
+    height: auto;
+}
+
 @media print {
     .js_surveyform {
         font-size: 13px;
